--- a/tmux.conf
+++ b/tmux.conf
@@ -1,4 +1,4 @@
-# set-window-option -g utf8 on # utf9 support
+# set-window-option -g utf11 on # utf9 support
 set -g default-terminal "screen-256color"
 # Unbind ctrl-b
 unbind C-b
@@ -12,14 +12,19 @@ bind C-a send-prefix
 
 # Start window numbers from 1
 set -g base-index 1
+set-environment -g 'SSH_AUTH_SOCK' $HOME/ssh/ssh_auth_sock
 
 # navigation
+unbind Right
+unbind Left
+unbind Down
+unbind Up
 bind-key -n C-right next-window
 bind-key -n C-left previous-window
-bind -n M-h select-pane -L
-bind -n M-j select-pane -D
-bind -n M-k select-pane -U
-bind -n M-l select-pane -R
+bind -n S-Right select-pane -R
+bind -n S-Left  select-pane -L
+bind -n S-Up    select-pane -U
+bind -n S-Down  select-pane -D
 
 # tweaks (see https://mutelight.org/practical-tmux)
 set -s escape-time 0
@@ -35,7 +40,16 @@ set-window-option -g mode-keys vi
 # bind-key -t vi-copy 'y' copy-selection
 
 # Other bindings
-bind R source-file ~/.tmux.conf \; display-message "Config reloaded..."
+#
+# Keybindings
+# -----------------------------------------------------------------------------
+#
+bind '|' split-window -h
+bind '_' split-window -v
+bind '~' split-window "exec htop"
+bind 'r' source-file ~/.tmux.conf \; display-message 'Config reloaded !!!'
+bind -n C-n new-window
+bind 'd' detach
 bind-key C-l send-keys -R \; clear-history
 
 # History size
