--- a/tmux.conf
+++ b/tmux.conf
@@ -44,11 +44,11 @@ set-window-option -g mode-keys vi
 # Keybindings
 # -----------------------------------------------------------------------------
 #
-bind '|' split-window -h
-bind '_' split-window -v
+bind '|' split-window -h -c "#{pane_current_path}"
+bind '_' split-window -v -c "#{pane_current_path}"
 bind '~' split-window "exec htop"
 bind 'r' source-file ~/.tmux.conf \; display-message 'Config reloaded !!!'
-bind -n C-n new-window
+bind -n C-n new-window -c "#{pane_current_path}"
 bind 'd' detach
 bind-key C-l send-keys -R \; clear-history
 
